--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -131,8 +131,12 @@ header .colum span{
 
 }
 
-.piano-keys .black:active{
+.piano-keys .black.active{
 	box-shadow: inset -5px 5px 10px rgba(255,255,255, 0.1);
 	background: linear-gradient(to bottom #000, #434343);
 
+}
+
+.piano-keys .key.hide span{
+	display: none;
 }
